WebApp - fix animation layout-bug; change header navigation - menu button on every site visible;

--- a/app/www/css/cocina.css
+++ b/app/www/css/cocina.css
@@ -324,6 +324,8 @@ a:hover.ui-link {
 }
 .popup-content {
 	text-align: center;
+	overflow: hidden;
+	background: #fff;
 }
 
 #recipe-filter-tbl {
@@ -363,4 +365,6 @@ img.recipe-list-preview {
 ul.animation-slider {
 	-webkit-padding-start: 0px;
 	-webkit-margin-before: 0;
+	margin-top: 0px;
+	padding-left: 0px;
 }
